<resources>
    <string name="app_name">Future Love</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="input">Name &amp; Image Input</string>
    <string name="photos">Photos</string>
    <string name="todo">TODO</string>
    <string name="Open">Navigation</string>
    <string name="Close">Mavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_desc">Lorem ipsum dolor sit amet consectetur. \nLacus pulvinar vitae tempor</string>
    <string name="user_name">User name</string>
    <string name="email">Email ...</string>
    <string name="password">Password ...</string>
    <string name="ask_reset_password">Do you want to reset password?</string>
    <string name="ask_having_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="event_detail">Our first date was a mix of nervousness and excitement. We shared stories</string>
    <string name="enter_your_user_name">A user name with a minimum length of 8 characters, containing no special characters, except \"_\"</string>
    <string name="enter_your_email">Follow the email rule: abc@abc.abc</string>
    <string name="enter_your_password">A password with a minimum length of 8 characters, containing no special characters, except \"_\"</string>
    <string name="enter_name">Enter name</string>
    <string name="click_here"><![CDATA[<-- Click here]]></string>
    <string name="_1">1</string>
    <string name="skip_login">Skip Login</string>
    <string name="content">Content</string>
    <string name="address">Address</string>
    <string name="device_name">Device name</string>
    <string name="time">time</string>
    <string name="btn_user_account">btn user account</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="comment">Comment</string>
    <string name="pairing">Pairing</string>
    <string name="video">Video</string>
    <string name="choose_file">Choose file</string>
    <string name="video_swap">Video Swap</string>
    <string name="ghjkl">TODO</string>
    <string name="gen_baby">Gen Baby</string>
    <string name="highlight_videos">Highlight Videos</string>
    <string name="show_more">Show more</string>
    <string name="create_your_video">Create Your Video</string>
    <string name="create_video">create video</string>
    <string name="library_video">Library Video</string>
    <string name="back_btn">back_btn</string>
    <string name="start">Start</string>
    <string name="image">Image</string>
    <string name="please_choose_image">Please Choose Image</string>
    <string name="add">add</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="use_video">Use Video</string>
    <string name="swap_image">Swap Image</string>
    <string name="highlight_images">Highlight Images</string>
    <string name="gen_image_baby">Gen Image Baby</string>
    <string name="pick_image_1">Pick Image 1</string>
    <string name="image_1">Image 1</string>
    <string name="pick_image_2">Pick Image 2</string>
    <string name="rec_image">rec_image</string>
    <string name="create_account">Create Account</string>
    <string name="password_retrieval">Password Retrieval</string>
    <string name="you_have_forgotten_have_password">You have forgotten have Password ? </string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="event">Event</string>
    <string name="name_user">Name user</string>
    <string name="email_user">Email user</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="image_view">Image_View</string>
    <string name="logo">logo</string>
    <string name="what_will_your_love_be_like_in_the_future">What will your love be like in the future</string>
    <string name="let_s_analyze_your_love_with_artificial_intelligence">Let\'s analyze your love with artificial intelligence</string>
    <string name="start_btn">start_btn</string>
    <string name="are_you_in_love_or_are_you_married_what_will_your_children_look_like">ARE YOU IN LOVE OR ARE YOU MARRIED? WHAT WILL YOUR CHILDREN LOOK LIKE?</string>
    <string name="click_now_but_look_your_child_in_the_future">CLICK NOW BUT LOOK YOUR CHILD IN THE FUTURE</string>
    <string name="do_you_swap_with_your_friend">DO YOU SWAP WITH YOUR FRIEND ?</string>
    <string name="click_now">Click Now</string>
    <string name="follow">Follow</string>
    <string name="_1_1m">1.1M</string>
    <string name="view">View</string>
    <string name="events">Events</string>
    <string name="_0">0</string>
    <string name="logout">Logout</string>
    <string name="swap_image_video">SWAP IMAGE WITH VIDEO</string>
    <string name="anhhanhh01">Anhhanhh01</string>
    <string name="convert_two_videos_posted_from_you">Convert two videos posted from you</string>
    <string name="contact_us">Contact us</string>
    <string name="bg_contact">bg_contact</string>
    <string name="processing_video_please_wait">Processing Video, Please Wait ...</string>
    <string name="stop">Stop</string>
    <string name="processing_image_please_wait">Processing Image, Please Wait ...</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password ...</string>
    <string name="download">Download</string>
    <string name="log_out_now">Log-out now?</string>
    <string name="are_you_sure_to_quit_the_app">Are you sure to quit the app?</string>
    <string name="cancel">Cancel</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="view_avatar">View Image</string>
    <string name="camera">Image To Camera</string>
    <string name="hoang_anh">Hoang Anh</string>
    <string name="dateoftime">dateOfTime</string>
    <string name="mm_dd_yy">mm/dd/yy</string>
    <string name="todo_1">TODO</string>
    <string name="event_detail_1">Event Detail User</string>
    <string name="enter">Enter Comment ...</string>
    <string name="delete">Delete</string>
    <string name="all_comment">All Comment</string>
    <string name="highlights_video">Highlights Video</string>
    <string name="add_event">Add Event</string>
    <string name="upload">Upload</string>
</resources>