<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.HomeScreenFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <ImageView
                android:id="@+id/draw_layout_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/image_1"
                android:contentDescription="@string/image_view"
                app:layout_constraintBottom_toBottomOf="@+id/imageView1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView1" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo_futurelove"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/swap_image"
                app:layout_constraintTop_toBottomOf="@+id/imageView1"
                tools:layout_editor_absoluteX="5dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/what_will_your_love_be_like_in_the_future"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_analyze_your_love_with_artificial_intelligence"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/textView1"
                app:layout_constraintStart_toStartOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <ImageButton
                android:id="@+id/genImageFuture_btn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_radius_50dp"
                android:backgroundTint="@color/bg_btn"
                android:contentDescription="@string/start_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintWidth_percent="0.3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/genImageFuture_btn"
                app:layout_constraintEnd_toEndOf="@+id/genImageFuture_btn"
                app:layout_constraintStart_toStartOf="@+id/genImageFuture_btn"
                app:layout_constraintTop_toTopOf="@+id/genImageFuture_btn" />


            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/bg_radius_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genImageFuture_btn">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_9"
                    android:contentDescription="@string/start_btn" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/are_you_in_love_or_are_you_married_what_will_your_children_look_like"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_now_but_look_your_child_in_the_future"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/genBaby_btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/start"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-black"
                    android:background="@drawable/bg_radius_50dp"
                    android:backgroundTint="@color/bg_btn"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_radius_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/image_10"
                    android:contentDescription="@string/start_btn" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/do_you_swap_with_your_friend"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="28sp" />


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_now"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/gen_two_image_btn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/start"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-black"
                    android:background="@drawable/bg_radius_50dp"
                    android:backgroundTint="@color/bg_btn"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/bg_radius_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:src="@drawable/image_swap_video"
                    android:contentDescription="@string/anhhanhh01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swap_image_video"
                    android:fontFamily="sans-serif-black"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="28sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/convert_two_videos_posted_from_you"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/swap_image_video_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:padding="15dp"
                    android:text="@string/start"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-black"
                    android:background="@drawable/bg_radius_50dp"
                    android:backgroundTint="@color/bg_btn"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_contact_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_2"/>


            <ImageView
                android:id="@+id/bg_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bg_contact"
                android:src="@drawable/bg_contact_us"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_contact_us" />

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginBottom="74dp"-->
<!--                android:contentDescription="@string/bg_contact"-->
<!--                android:src="@drawable/image_ai"-->
<!--                app:layout_constraintBottom_toBottomOf="@id/bg_contact"-->
<!--                app:layout_constraintEnd_toEndOf="@id/bg_contact"-->
<!--                app:layout_constraintStart_toStartOf="@id/bg_contact" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/menu_navigation_draw">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>