<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ChangePasswordFragment">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_futurelove"
        app:layout_constraintBottom_toTopOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Logo" />

    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="350dp"
        android:layout_height="290dp"
        android:src="@drawable/background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_bg"
        app:layout_constraintStart_toStartOf="@+id/login_bg"
        app:layout_constraintTop_toTopOf="@+id/login_bg" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_old_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_frame"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/old_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        app:layout_constraintVertical_bias="0"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="@+id/login_bg"
        app:layout_constraintStart_toStartOf="@+id/login_bg"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!--  Alert for Username  -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_white_shape_corner_20"
        android:paddingHorizontal="8dp"
        android:paddingVertical="1dp"
        android:text="@string/enter_your_email"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/edt_old_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_old_password" />

    <!--  Input for Password  -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_frame"
        android:fontFamily="@font/roboto_slab"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_bg"
        app:layout_constraintStart_toStartOf="@+id/login_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_alert"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_show_password_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/display_password"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/edt_old_password"
        app:layout_constraintEnd_toEndOf="@+id/edt_old_password"
        app:layout_constraintTop_toTopOf="@+id/edt_old_password" />

    <!--  Icon: Show password  -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_show_password"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="-40dp"
        android:scaleType="fitXY"
        android:src="@drawable/display_password"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/edt_new_password"
        app:layout_constraintStart_toEndOf="@+id/edt_new_password"
        app:layout_constraintTop_toTopOf="@+id/edt_new_password" />

    <!--  Alert for Password  -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/bg_white_shape_corner_20"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/enter_your_password"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edt_new_password"
        app:layout_constraintStart_toStartOf="@+id/edt_new_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

    <!--  Button Login  -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        android:layout_width="328dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:background="@drawable/btn_login_shape"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password_alert"
        app:layout_constraintVertical_bias="0" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_ask_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bg">

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>